# tg-video-dating-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml  requirements.txt
alembic/: env.py
app/: main.py  web.py
app/bot/: middlewares.py  states.py
app/bot/handlers/: __init__.py  registration.py
app/bot/keyboards/: common.py
app/core/: config.py
app/models/: __init__.py  video.py
app/repositories/: videos.py
app/services/: matching.py
assets/contact-instruction/: README.md
assets/fake-circles/: README.md
assets/fortune-wheel/: README.md
assets/recorder-theme/: README.md
cmd/bot/: main.go
internal/admin/: admin.go
internal/ai/: kie.go  remote.go
internal/config/: config.go
internal/db/: migrate.go  postgres.go
internal/handlers/: miniapp.go  payments.go  webhook.go
internal/kinguin/: client.go
internal/maxapi/: client.go  types.go
internal/models/: models.go
internal/payments/: tbank.go  yookassa.go
internal/repositories/: admin.go  repository.go
internal/services/: admin.go  dating.go  shop.go
internal/version/: version.go
migrations/: 000001_init.down.sql  000001_init.up.sql  000002_ai_characters.down.sql  000002_ai_characters.up.sql  000003_admin.down.sql  000003_admin.up.sql
src/: README.md  alembic.ini
src/alembic/: env.py
src/alembic/versions/: 20260608_0001_initial.py
src/app/: web.py
src/app/core/: config.py
src/app/db/: base.py  init.py  session.py
src/app/models/: enums.py  interaction.py  user.py
src/app/repositories/: users.py
(+7 files in other folders)
