[project]
name = "tg-video-dating-bot"
version = "0.1.0"
description = "Telegram dating bot based on video notes"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.6,<4",
  "alembic>=1.13,<2",
  "asyncpg>=0.29,<1",
  "fastapi>=0.111,<1",
  "pydantic-settings>=2.2,<3",
  "sqlalchemy[asyncio]>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4,<1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
